# group

./: Cargo.toml  README.md
src/: additive.rs  direct_product.rs  helpers.rs  lib.rs  reduce.rs  ristretto.rs  scalar.rs  secp256k1.rs  self_product.rs
src/helpers/: const_generic_array_serialization.rs
src/ristretto/: group_element.rs  scalar.rs
src/secp256k1/: group_element.rs  scalar.rs
