[package]
name = "group"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { version = "0.5.5", features = ["rand_core", "serde"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
subtle = { version = "2.5", features = ["const-generics"] }
subtle-ng = "2.5"
thiserror = "1.0.47"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "serde"] }

[dev-dependencies]

[features]
