[package]
name = "group"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { version = "0.5.5", features = ["rand_core", "serde"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
subtle = { version = "2.5", features = ["const-generics"] }
subtle-ng = "2.5"
thiserror = "1.0"
k256 = { version = "0.13", features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "ecdsa", "hash2curve"], default-features = false }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "serde"] }
sha3_old = { package = "sha3", version = "0.9", default-features = false } # curve25519 uses old version so must we
sha3 = "0.10.8"

[dev-dependencies]

[features]
